Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • gstreamer gstreamer
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,008
    • Issues 1,008
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 464
    • Merge requests 464
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • GStreamerGStreamer
  • gstreamergstreamer
  • Issues
  • #187
Closed
Open
Issue created Sep 06, 2016 by Bugzilla Migration User@bugzilla-migration

gstclock: segmentation fault when unschedule

Submitted by Miguel París Díaz @mparisdiaz

Link to original bug (#770953)

Description

Hello,
I have found a segmentation fault when gst_clock_id_unschedule is called.

Debugging with GDB I found that it is caused in the line [1].
From this info and analysing the code, it seems that gst_clock_entry_new [2] does not increase the ref of the clock used, it just keeps the pointer.
So I suppose that the problem is that the clock has been released when gst_clock_id_unschedule is called.

What do you think about that?

Refs
[1] https://github.com/Kurento/gstreamer/blob/0fb3a083ce04551fbdba7a94f0ac5612515bda67/gst/gstclock.c#L667
[2] https://github.com/Kurento/gstreamer/blob/0fb3a083ce04551fbdba7a94f0ac5612515bda67/gst/gstclock.c#L243

Version: 1.8.3

Assignee
Assign to
Time tracking